test/neg/bug25.scala
/** Signature of PortableRemoteObject's constructor is:
    protected PortableRemoteObject() throws RemoteException
*/

class A extends javax.rmi.PortableRemoteObject();

